fixed the header h1 to be visible

--- a/podcast app/src/styling/FavoritePage.css
+++ b/podcast app/src/styling/FavoritePage.css
@@ -34,6 +34,11 @@
 .favorites-group {
 	margin-bottom: 2rem;
 }
+.favorites-header h1 {
+	color: black !important;
+	text-align: center;
+	margin-bottom: 1.2rem;
+}
 
 .favorites-group h3 {
 	margin-bottom: 0.8rem;
@@ -41,12 +46,12 @@
 	padding-bottom: 0.4rem;
 	font-size: 1.1rem;
 }
-.favs-link{
+.favs-link {
 	color: beige;
 	font-size: 1.5rem;
 	margin-right: 3rem;
 	text-decoration: none;
 }
-.favs-link:hover{
+.favs-link:hover {
 	color: #4a90e2;
 }
